Fix run script. Now compiles and start backend succesfully.